Added adapter for navigation drawer activity and brick finder to connect.

--- a/app/src/main/res/layout/activity_drawer.xml
+++ b/app/src/main/res/layout/activity_drawer.xml
@@ -4,7 +4,7 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.droidev3.albertogarcia.droidev3.ui.activity.DrawerActivity">
+    tools:context="com.guerritastudio.albertogarcia.droidev3.ui.activity.DrawerActivity">
 
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
@@ -44,7 +44,7 @@
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:name="com.droidev3.albertogarcia.droidev3.ui.fragment.NavigationDrawerFragment"
+        android:name="com.guerritastudio.albertogarcia.droidev3.ui.fragment.NavigationDrawerFragment"
         tools:layout="@layout/fragment_navigation_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
