--- a/app/src/main/res/layout/fragment_joystick.xml
+++ b/app/src/main/res/layout/fragment_joystick.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.droidev3.albertogarcia.droidev3.ui.fragment.JoystickFragment">
+    tools:context="com.guerritastudio.albertogarcia.droidev3.ui.fragment.JoystickFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
