--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -38,20 +38,31 @@
             android:layout_margin="20dp"
             android:layout_marginTop="10dp">
 
-
             <ProgressBar
+                android:id="@+id/connect_ev3_pbar"
+                android:visibility="gone"
                 android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/connect_ev3_pbar" />
+                android:layout_height="wrap_content" />
 
-            <Button
-
-                android:id="@+id/connect_ev3_btn"
-
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/connect"/>
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/connect_ev3_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/connect"/>
+                <Button
+                    android:layout_marginLeft="@dimen/margin_l"
+                    android:id="@+id/search_ev3_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/search"/>
+            </LinearLayout>
+
         </RelativeLayout>
 
     </LinearLayout>
