--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,10 +1,75 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.guerritastudio.albertogarcia.droidev3.ui.fragment.InfoFragment">
+    tools:context="com.guerritastudio.albertogarcia.droidev3.ui.fragment.InfoFragment"
+    android:orientation="vertical"
+    android:layout_margin="@dimen/margin_l">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="Fragment Info" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/fragment_info_voltage_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/voltage"
+            android:layout_marginBottom="@dimen/margin_s"/>
+
+        <TextView
+            android:id="@+id/fragment_info_currentdraw_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/current_draw"
+            android:layout_marginBottom="@dimen/margin_s"/>
+
+        <TextView
+            android:id="@+id/fragment_info_touch_sensor_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/touch_sensor"
+            android:layout_marginBottom="@dimen/margin_s"/>
+        <TextView
+            android:id="@+id/fragment_info_ir_sensor_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ir_sensor"
+            android:layout_marginBottom="@dimen/margin_s"/>
+        <TextView
+            android:id="@+id/fragment_info_color_sensor_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/color_sensor"
+            android:layout_marginBottom="@dimen/margin_s"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/margin_xxl">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/led_pattern" />
+
+        <Spinner
+            android:layout_marginLeft="@dimen/margin_s"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/fragment_info_led_pattern_sp" />
+
+    </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Update"
+        android:id="@+id/fragment_info_update_btn" />
+
+
+</LinearLayout>
