--- a/app/src/main/res/layout/fragment_search_ev3_dialog.xml
+++ b/app/src/main/res/layout/fragment_search_ev3_dialog.xml
@@ -18,13 +18,14 @@
         <ProgressBar
             android:id="@+id/searching_ev3_pbar"
             android:visibility="gone"
-            android:layout_marginRight="18dp"
+            android:layout_marginRight="@dimen/margin_xl"
             android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_centerVertical="true"
+            android:layout_width="40dp"
+            android:layout_height="40dp"/>
         <android.widget.IconButton
             android:text="{fa-refresh}"
-            android:textSize="28dp"
+            android:textSize="26dp"
             android:background="@android:color/transparent"
             android:id="@+id/searching_ev3_refresh_btn"
             android:visibility="gone"
