--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -3,6 +3,7 @@
 
     <!--Navigation Drawer-->
     <array name="menu_sections">
+        <item>Inicio</item>
         <item>Traductor</item>
         <item>Joystick</item>
         <item>Información</item>
