--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -7,14 +7,24 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="true"
+        android:id="@+id/activity_connect_ll">
 
+        <ImageView
+            android:layout_marginBottom="@dimen/margin_l"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/ev3_head"
+            android:layout_width="132dp"
+            android:layout_height="132dp"
+            android:id="@+id/imageView" />
         <TextView
             android:text="@string/app_name"
             android:gravity="center"
@@ -46,6 +56,7 @@
                 android:layout_height="wrap_content" />
 
             <LinearLayout
+                android:layout_marginTop="@dimen/margin_m"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
