--- a/app/src/main/res/layout/row_menu_drawer_header.xml
+++ b/app/src/main/res/layout/row_menu_drawer_header.xml
@@ -19,7 +19,7 @@
             android:id="@+id/row_menu_drawer_header_rounded_iv"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/ev3_head"
             android:scaleType="centerCrop"
             app:riv_corner_radius="30dip"
             app:riv_border_width="2dip"
