--- a/app/src/main/res/layout/fragment_translate.xml
+++ b/app/src/main/res/layout/fragment_translate.xml
@@ -4,31 +4,40 @@
     android:layout_height="match_parent"
     tools:context="com.guerritastudio.albertogarcia.droidev3.ui.fragment.TranslateFragment">
 
-
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Menú Versión:"
         android:id="@+id/fragment_translate_menu_info_tv"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
-    <EditText
-        android:hint="@string/insert_text_here"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/to_speech_et"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:gravity="center_horizontal"/>
-    <Button
-        android:layout_marginTop="@dimen/margin_l"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/to_speech"
-        android:id="@+id/to_speech_btn"
-        android:layout_below="@+id/to_speech_et"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="Menú Versión:" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:orientation="vertical">
+
+        <ImageButton
+            android:layout_marginBottom="@dimen/margin_s"
+            android:id="@+id/to_speech_btn"
+            android:layout_width="150dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/abc_cab_background_top_mtrl_alpha"
+            android:src="@android:drawable/ic_menu_send"
+            android:text="@string/to_speech" />
+
+        <EditText
+            android:id="@+id/to_speech_et"
+            android:layout_width="256dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_l"
+            android:gravity="center_horizontal"
+            android:hint="@string/insert_text_here" />
+
+    </LinearLayout>
 
 </RelativeLayout>
