--- a/app/src/main/res/layout/fragment_analog_joystick.xml
+++ b/app/src/main/res/layout/fragment_analog_joystick.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout
-    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_height="fill_parent">
 
     <LinearLayout
         android:id="@+id/ll"
@@ -12,22 +12,22 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/angleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="angleTextView"
-            android:id="@+id/angleTextView" />
+            android:text="angleTextView" />
 
         <TextView
+            android:id="@+id/powerTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="powerTextView"
-            android:id="@+id/powerTextView" />
+            android:text="powerTextView" />
 
         <TextView
+            android:id="@+id/directionTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="directionTextView"
-            android:id="@+id/directionTextView" />
+            android:text="directionTextView" />
     </LinearLayout>
 
     <RelativeLayout
@@ -39,13 +39,25 @@
         android:layout_alignParentStart="true">
 
         <com.guerritastudio.albertogarcia.droidev3.widget.JoystickView
-            android:layout_centerInParent="true"
             android:id="@+id/joystickView"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_width="match_parent">
+            android:layout_centerInParent="true">
 
         </com.guerritastudio.albertogarcia.droidev3.widget.JoystickView>
 
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/fragment_analog_joystick_shoot_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/height_button"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="76dp"
+        android:layout_marginLeft="43dp"
+        android:layout_marginStart="43dp"
+        android:layout_toEndOf="@+id/fragment_analog_joystick_ll"
+        android:layout_toRightOf="@+id/fragment_analog_joystick_ll"
+        android:text="@string/shoot" />
 
 </RelativeLayout>
