--- a/app/src/main/res/layout/fragment_drawer.xml
+++ b/app/src/main/res/layout/fragment_drawer.xml
@@ -12,3 +12,4 @@
         android:layout_height="wrap_content" />
 
 </RelativeLayout>
+<!-- From: file:/Users/AlbertoGarcia/Repositorios/DroidEv3/app/src/main/res/layout/fragment_drawer.xml -->
