--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -189,7 +189,7 @@
 
         <Spinner
             android:id="@+id/fragment_info_led_pattern_sp"
-            android:layout_width="wrap_content"
+            android:layout_width="64dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/margin_s" />
 
@@ -210,7 +210,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/margin_l"
-        android:text="@string/about" />
-
+        android:text="@string/about"
+        android:visibility="gone" />
 
 </LinearLayout>
