--- a/app/src/main/res/layout/fragment_joystick_view_pager.xml
+++ b/app/src/main/res/layout/fragment_joystick_view_pager.xml
@@ -1,10 +1,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.guerritastudio.albertogarcia.droidev3.ui.fragment.JoystickViewPagerFragment">
 
-    <com.guerritastudio.albertogarcia.droidev3.widget.RegisterViewPager
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.guerritastudio.albertogarcia.droidev3.widget.RegisterViewPager xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/fragment_joystick_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -14,11 +14,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="top"
-            android:background="#33b5e5"
-            android:textColor="#fff"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp" />
-
+            android:background="@color/background_pager"
+            android:paddingBottom="@dimen/padding_xs"
+            android:paddingTop="@dimen/padding_xs"
+            android:textColor="@color/white" />
 
     </com.guerritastudio.albertogarcia.droidev3.widget.RegisterViewPager>
 
