--- a/app/src/main/res/layout/fragment_search_ev3_dialog.xml
+++ b/app/src/main/res/layout/fragment_search_ev3_dialog.xml
@@ -1,72 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
     <RelativeLayout
-        android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/searching_ev3_tv"
-        android:layout_margin="@dimen/margin_m"
-        android:textSize="24sp"
-        android:textColor="@color/SteelBlue"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/searching"/>
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/searching_ev3_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_m"
+            android:text="@string/searching"
+            android:textColor="@color/SteelBlue"
+            android:textSize="24sp" />
+
         <ProgressBar
             android:id="@+id/searching_ev3_pbar"
-            android:visibility="gone"
-            android:layout_marginRight="@dimen/margin_xl"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_width="40dp"
-            android:layout_height="40dp"/>
+            android:layout_marginRight="@dimen/margin_xl"
+            android:visibility="gone" />
+
         <android.widget.IconButton
-            android:text="{fa-refresh}"
-            android:textSize="26sp"
-            android:background="@android:color/transparent"
             android:id="@+id/searching_ev3_refresh_btn"
-            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:background="@android:color/transparent"
+            android:text="{fa-refresh}"
+            android:textColor="@color/SteelBlue"
+            android:textSize="26sp"
+            android:visibility="gone"
 
             />
     </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
         <View
             android:layout_width="fill_parent"
             android:layout_height="2dp"
-            android:background="@android:color/darker_gray"/>
+            android:background="@android:color/darker_gray" />
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/fragment_search_dialog_SRL"
-            android:layout_margin="@dimen/margin_m"
             android:layout_width="wrap_content"
-            android:layout_height="128dp">
+            android:layout_height="128dp"
+            android:layout_margin="@dimen/margin_m">
 
-        <ListView
-            android:id="@+id/fragment_search_dialog_lv"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-        </ListView>
+            <ListView
+                android:id="@+id/fragment_search_dialog_lv"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"/>
         </android.support.v4.widget.SwipeRefreshLayout>
 
         <TextView
             android:id="@+id/fragment_search_ev3_not_found_tv"
-            android:visibility="gone"
-            android:textColor="@color/IndianRed"
-            android:layout_marginTop="@dimen/margin_l"
-            android:layout_centerHorizontal="true"
-            android:textSize="@dimen/abc_text_size_medium_material"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/form_brick_not_found"/>
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/margin_l"
+            android:text="@string/form_brick_not_found"
+            android:textColor="@color/IndianRed"
+            android:textSize="@dimen/abc_text_size_medium_material"
+            android:visibility="gone" />
     </RelativeLayout>
-
 
 </LinearLayout>
