--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -7,9 +7,10 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="256dp"
-        android:layout_height="256dp"
+        android:layout_width="@dimen/start_img"
+        android:layout_height="@dimen/start_img"
         android:layout_gravity="center"
+        android:scaleType="centerCrop"
         android:src="@drawable/logo" />
 
 </FrameLayout>
