--- a/app/src/main/res/layout/fragment_text_to_speech.xml
+++ b/app/src/main/res/layout/fragment_text_to_speech.xml
@@ -2,15 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.guerritastudio.albertogarcia.droidev3.ui.fragment.TranslateFragment">
+    tools:context="com.guerritastudio.albertogarcia.droidev3.ui.fragment.TextToSpeechFragment">
 
     <TextView
-        android:id="@+id/fragment_translate_menu_info_tv"
+        android:id="@+id/fragment_translate_language_info_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="Menú Versión:" />
+        android:layout_centerHorizontal="true" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -21,11 +20,11 @@
         android:orientation="vertical">
 
         <ImageButton
-            android:layout_marginBottom="@dimen/margin_s"
             android:id="@+id/to_speech_btn"
             android:layout_width="150dp"
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="@dimen/margin_s"
             android:background="@drawable/abc_cab_background_top_mtrl_alpha"
             android:src="@android:drawable/ic_menu_send"
             android:text="@string/to_speech" />
