--- a/app/src/main/res/layout/row_brick_info.xml
+++ b/app/src/main/res/layout/row_brick_info.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView android:id="@+id/row_brick_info_name"
+    <TextView
+        android:id="@+id/row_brick_info_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="MyDroidEv3"
         android:textColor="@color/ForestGreen"
-        android:textSize="18sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:textSize="18sp" />
 
-    <TextView android:id="@+id/row_brick_info_ip_address"
+    <TextView
+        android:id="@+id/row_brick_info_ip_address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="192.168.1.1"
         android:textColor="@color/ForestGreen"
-        android:textSize="16sp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
+        android:textSize="16sp" />
 
 </LinearLayout>
