--- a/app/src/main/res/layout/row_menu_drawer_header.xml
+++ b/app/src/main/res/layout/row_menu_drawer_header.xml
@@ -6,54 +6,54 @@
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:src="@drawable/navigation_drawer_header"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:src="@drawable/navigation_drawer_header" />
+
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="fill_parent"
+        android:orientation="vertical"
         android:padding="@dimen/margin_m">
 
-        <com.makeramen.roundedimageview.RoundedImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
+        <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/row_menu_drawer_header_rounded_iv"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:src="@drawable/ev3_head"
             android:scaleType="centerCrop"
-            app:riv_corner_radius="30dip"
-            app:riv_border_width="2dip"
+            android:src="@drawable/ev3_head"
             app:riv_border_color="@color/aqua"
+            app:riv_border_width="2dip"
+            app:riv_corner_radius="30dip"
             app:riv_mutate_background="true"
-            app:riv_tile_mode="clamp"
-            app:riv_oval="true" />
+            app:riv_oval="true"
+            app:riv_tile_mode="clamp" />
 
         <LinearLayout
-            android:gravity="bottom"
-            android:layout_marginLeft="@dimen/margin_l"
-            android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="@dimen/margin_l"
+            android:gravity="bottom"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/row_menu_drawer_header_name_tv"
-                android:lines="1"
-                android:ellipsize="end"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:lines="1"
+                android:text="@string/my_name"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/white"
-                android:text="Alberto Garcia Olivero" />
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/row_menu_drawer_header_ip_address"
-                android:lines="1"
-                android:ellipsize="end"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:lines="1"
+                android:text="@string/ip_v4"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/white"
-                android:text="IPv4: 192.168.1.1"/>
+                android:textColor="@color/white" />
 
 
         </LinearLayout>
